# EDD1

./: .gitignore
Exercícios/Outros Códigos/: 01_saida.cpp  02_operacoes.cpp  03_entrada.cpp  04_variaveis.cpp  05_playlist_musical.cpp  07_fila.cpp  08_fila_prioridade.cpp  09_fila_prioridade_heap.cpp
Exercícios/aula01/: 01_nome.cpp  02_temperatura.cpp  03_media.cpp  04_triangulo.cpp  05_PA.cpp
Exercícios/aula02/: 01_conversao.cpp  02_paridade.cpp  03_positividade.cpp  04_maior.cpp  05_bissexto.cpp  06_intervalo.cpp  07_verificacao.cpp  08_multiplicacao_bit_a_bit.cpp  09_paridade_bit_a_bit.cpp  10_desafio_inversao.cpp
Exercícios/aula03/: 01_fatorial.cpp  02_fibonacci.cpp  03_maior_menor_infinito.cpp  04_montar_v.cpp  05_pedra_papel_tesoura.cpp
Exercícios/aula04/: 01_vetor.cpp  02_soma_elementos.cpp  03_maior_menor.cpp  04_media_impares.cpp
Exercícios/aula05/: 01_operadores_ponteiros.cpp  02_troca_valores_ponteiros.cpp  05_media_notas.cpp  (+3 more)
Trabalhos/: Trabalho01.cpp  gera_graficos_balanceamento.py
Trabalhos/Trabalho02/: CMakeLists.txt  README.md  build_and_run.sh
Trabalhos/Trabalho02/assets/sprites/enemies/GandalfHardcore Slime Enemy/: READ ME.txt  Slime.ase
Trabalhos/Trabalho02/headers/: AtributesMenu.h  AttributesMenu.h  DifficultyMenu.h  Enemy.h  EnemyQueue.h  Fight.h  Fighter.h  Game.h  GenderMenu.h  Inventory.h  Menu.h  Player.h  Util.h
Trabalhos/Trabalho02/src/: AtributesMenu.cpp  AttributesMenu.cpp  DifficultyMenu.cpp  Enemy.cpp  EnemyQueue.cpp  Fight.cpp  Fighter.cpp  Game.cpp  GenderMenu.cpp  Inventory.cpp  Menu.cpp  Player.cpp  Util.cpp  main.cpp
(+31 files in other folders)
